--- a/myBase.csproj
+++ b/myBase.csproj
@@ -36,8 +36,16 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevExpress.Data.Desktop.v23.1, Version=23.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Data.v23.1, Version=23.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Drawing.v23.1, Version=23.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Printing.v23.1.Core, Version=23.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Utils.v23.1, Version=23.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,6 +55,8 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationClient" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base.cs">
@@ -55,10 +65,51 @@
     <Compile Include="Base.Designer.cs">
       <DependentUpon>Base.cs</DependentUpon>
     </Compile>
+    <Compile Include="Extend\PannlExtend.cs" />
+    <Compile Include="Helper\MsgBoxHelper.cs" />
+    <Compile Include="Home\Submenu1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Home\Submenu1.Designer.cs">
+      <DependentUpon>Submenu1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Home\Submenu2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Home\Submenu2.Designer.cs">
+      <DependentUpon>Submenu2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Home\Submenu3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Home\Submenu3.Designer.cs">
+      <DependentUpon>Submenu3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UControls\UClosIconBar.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UControls\UClosIconBar.Designer.cs">
+      <DependentUpon>UClosIconBar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UControls\UIconButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="UControls\UIconButton.Designer.cs">
+      <DependentUpon>UIconButton.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Base.resx">
       <DependentUpon>Base.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Home\Submenu1.resx">
+      <DependentUpon>Submenu1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Home\Submenu2.resx">
+      <DependentUpon>Submenu2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Home\Submenu3.resx">
+      <DependentUpon>Submenu3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -69,6 +120,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UControls\UClosIconBar.resx">
+      <DependentUpon>UClosIconBar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UControls\UIconButton.resx">
+      <DependentUpon>UIconButton.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
